# A24_ruler_Automne_2024

C3I_Equipe2_Documentation/Bom/: PCB_Ruler_V1_2024BomV1.csv
Exemple_règle/: Ruler_CCI_V1.kicad_prl
code/Version1/Ruler2024_Frank_Lau/: CMakeLists.txt
code/Version1/Ruler2024_Frank_Lau/main/: CMakeLists.txt  I2C_Controller.cpp  IMU.cpp  IO_Expender.cpp  TCA9534.cpp  TimeBased.cpp  main.cpp
code/Version1/Ruler2024_Frank_Lau/main/Processus/: Button_Processus.cpp  IMU_Processus.cpp  WebBrowser.cpp
documentation/: C3I_2024_équipe2_documentation (1).docx  C3I_2024_équipe2_documentation.docx
elec/PCB_Ruler_V1_2024/: #auto_saved_files#  Features.kicad_sch  MCU_ESP32-C3.kicad_sch  PCB_Ruler_V1_2024.kicad_pcb  PCB_Ruler_V1_2024.kicad_prl  PCB_Ruler_V1_2024.kicad_pro  PCB_Ruler_V1_2024.kicad_sch  Power.kicad_sch  Screen.kicad_sch  _autosave-Features.kicad_sch  _autosave-MCU_ESP32-C3.kicad_sch  _autosave-PCB_Ruler_V1_2024.kicad_pcb  _autosave-PCB_Ruler_V1_2024.kicad_sch  _autosave-Power.kicad_sch  _autosave-Screen.kicad_sch  fp-DCFE.tmp  fp-info-cache  fp-lib-table  sym-lib-table  ~_autosave-PCB_Ruler_V1_2024.kicad_pcb.lck
elec/PCB_Ruler_V1_2024/Bom/: PCB_Ruler_V1_2024BomV1.csv
elec/PCB_Ruler_V1_2024/Gerbers/: PCB_Ruler_V1_2024-B_Cu.gbr  PCB_Ruler_V1_2024-B_Mask.gbr  PCB_Ruler_V1_2024-B_Paste.gbr  PCB_Ruler_V1_2024-B_Silkscreen.gbr  PCB_Ruler_V1_2024-Edge_Cuts.gbr  PCB_Ruler_V1_2024-F_Cu.gbr  PCB_Ruler_V1_2024-F_Mask.gbr  PCB_Ruler_V1_2024-F_Paste.gbr  PCB_Ruler_V1_2024-F_Silkscreen.gbr  PCB_Ruler_V1_2024-NPTH.drl  PCB_Ruler_V1_2024-PTH.drl  PCB_Ruler_V1_2024-job.gbrjob
(+34 files in other folders)
